Finalizado el HTML

--- a/index.html
+++ b/index.html
@@ -12,6 +12,115 @@
 
 <body>
 
+    <header>
+
+        <h3 class="logo">Penny Costas</h1>
+            <div class="barra-principal">
+                <li>Inicio</li>
+                <li>Tienda</li>
+                <li>Como Comprar</li>
+                <li>FAQS</li>
+                <li>Contacto</li>
+            </div>
+
+    </header>
+
+    <section class="carrusel">
+
+        <h1 class="title">Penny <br>Costas</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quae ad voluptas labore at quod illum! Voluptas
+            ipsa dignissimos, iste veritatis dolores expedita! Aut, sunt?</p>
+        <a href="#" class="btn">Ver Obras</a>
+
+    </section>
+
+    <section class="penny__obras">
+
+        <a href="#" class="penny__info">Acerca del artista</a>
+        <a href="#" class="penny__info">Acerca de sus obras</a>
+
+    </section>
+
+    <section class="FAQS">
+
+        <div class="garantias">
+            <header>
+                <h2 class="faqs">FAQS</h2>
+            </header>
+            <div class="garantia">
+                <img src="" alt="">
+                <h3 class="titulo">Selección</h3>
+                <p>Las obras de Penny Costa a la venta son seleccionadas para garantizar que tengas una pieza unica e
+                    irrepetible.</p>
+            </div>
+            <div class="garantia">
+                <img src="" alt="">
+                <h3 class="titulo">Formas de Pago</h3>
+                <p>Toda la info que necesitas para poder comprar en Penny Costas y como hacerlo.</p>
+            </div>
+            <div class="garantia">
+                <img src="" alt="">
+                <h3 class="titulo">Certificación</h3>
+                <p>Las obras de Penny Costa se entregan con Certificados de autenticidad de parte del mismisimo Penny
+                    Costas.</p>
+            </div>
+            <div class="garantia">
+                <img src="" alt="">
+                <h3 class="titulo">Envíos</h3>
+                <p>Penny Costas llega a cualquier punto del pais y ofrece diversos medios de pago.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="obras-destacadas">
+        <header>
+            <div class="destacadas-titulo">
+                <h3>Venta de Arte</h3>
+                <h2>Obras destacadas</h2>
+            </div>
+        </header>
+
+        <div class="obras">
+            <div class="obra">
+                <img src="" alt="">
+            </div>
+            <div class="obra">
+                <img src="" alt="">
+            </div>
+            <div class="obra">
+                <img src="" alt="">
+            </div>
+            <div class="obra">
+                <img src="" alt="">
+            </div>
+            <div class="obra">
+                <img src="" alt="">
+            </div>
+            <div class="obra">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-nav">
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Tienda</a></li>
+            <li><a href="">Como Comprar</a></li>
+            <li><a href=""></a>FAQS</li>
+            <li><a href=""></a>Contacto</li>
+        </div>
+        <div class="logo-redes">
+            <div class="logo">
+                <a href=""></a>
+            </div>
+            <div class="redes">
+                <a href=""></a>
+                <a href=""></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
