Se agrego fotos al HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li>Inicio</li>
                 <li>Tienda</li>
                 <li>Como Comprar</li>
-                <li>FAQS</li>
+                <li>Preguntas Frecuentes</li>
                 <li>Contacto</li>
             </div>
 
@@ -30,14 +30,36 @@
         <h1 class="title">Penny <br>Costas</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quae ad voluptas labore at quod illum! Voluptas
             ipsa dignissimos, iste veritatis dolores expedita! Aut, sunt?</p>
-        <a href="#" class="btn">Ver Obras</a>
+        <a href="#" class="btn">
+            Ver Obras</a>
 
     </section>
 
-    <section class="penny__obras">
-
-        <a href="#" class="penny__info">Acerca del artista</a>
-        <a href="#" class="penny__info">Acerca de sus obras</a>
+    <section class="autor">
+        <div class="contenedor">
+            <img class="foto__Penny" src="css/Imagenes/Penny_autor.jpg" alt="Foto de PennyCostas">
+            <p class="descripcion__autor">Bueno mi nombre obviamente no es Penny Costas, sino que detras de este
+                pseudónimo estoy yo, Rodrigo Romero, un artista de 21 años que busca mostrar su arte a esta parte del
+                globo.
+                Desde los 8 años aproximadamente me metí en el mundo del dibujo y mientras crecía en la pintura. Todos
+                me decian que era bueno y que siga haciendolo y hace un tiempo tomé la decision de dejar mi trabajo y
+                dedicarme pura y exclusivamente a esto cueste lo que cueste, porque uno tiene que hacer algo que lo haga
+                feliz, aunque los resultados no sean los esperados; ademas me excuso con que soy joven;).
+                Uno de mis sueños siempre fue tener una marca de lo que sea, poder vivir de ella, y que el mundo lleve
+                una prenda, tenga un cuadro o lo que sea diseñado por mi. Entonces dije "listo, me mando" y cree Penny
+                Costas, me hubiese gustado elegir un nombre con un trasfondo, un significado, pero queria simplemente
+                tener un nombre artistico que sea el nombre de la marca a la vez; surgió mientras trabajaba luego de
+                unos tantos pensados y decidí dejar de darle vueltas al asunto y quedarme con ese nombre.
+                Tomo inspiración de millones de cosas pero de donde mas saco es de la musica y los artistas que la
+                hacen. Me gusta mucho el mundo de la ropa, siempre que salgo tengo que ponerme algo que me diferencie de
+                los demas, y es por eso que está en mis planes hacer ropa, pero eso lleva un poco más de logistica, por
+                lo que estoy averiguando,denme tiempo.
+                Quiero que el mundo me conozca por mis piezas de arte que son unicas, ese es el valor que les doy, la
+                persona que adquiera una pieza Penny Costas va a saber que tiene en su ambiente un cuadro pintado y
+                texturizado a mano unico en el mundo.
+                No se si esto llegará a algun lado pero por lo menos lo intenté y siempre voy a hacer lo qie me hace
+                feliz</p>
+        </div>
 
     </section>
 
@@ -45,27 +67,27 @@
 
         <div class="garantias">
             <header>
-                <h2 class="faqs">FAQS</h2>
+                <h2 class="faqs">Preguntas Frecuentes</h2>
             </header>
             <div class="garantia">
-                <img src="" alt="">
+                <img src="css/Imagenes/check.png" alt="Selección">
                 <h3 class="titulo">Selección</h3>
                 <p>Las obras de Penny Costa a la venta son seleccionadas para garantizar que tengas una pieza unica e
                     irrepetible.</p>
             </div>
             <div class="garantia">
-                <img src="" alt="">
+                <img src="css/Imagenes/pago.png" alt="Formas de Pago">
                 <h3 class="titulo">Formas de Pago</h3>
                 <p>Toda la info que necesitas para poder comprar en Penny Costas y como hacerlo.</p>
             </div>
             <div class="garantia">
-                <img src="" alt="">
+                <img src="css/Imagenes/certificado.png" alt="Certificación">
                 <h3 class="titulo">Certificación</h3>
                 <p>Las obras de Penny Costa se entregan con Certificados de autenticidad de parte del mismisimo Penny
                     Costas.</p>
             </div>
             <div class="garantia">
-                <img src="" alt="">
+                <img src="css/Imagenes/check.png" alt="Envíos">
                 <h3 class="titulo">Envíos</h3>
                 <p>Penny Costas llega a cualquier punto del pais y ofrece diversos medios de pago.</p>
             </div>
@@ -82,24 +104,32 @@
         </header>
 
         <div class="obras">
+
             <div class="obra">
-                <img src="" alt="">
+                <div class="hot"></div>
+                <img src="css/Imagenes/azul.JPG" alt="Obra">
             </div>
             <div class="obra">
-                <img src="" alt="">
+                <div class="hot"></div>
+                <img src="css/Imagenes/casa.JPG" alt="Obra">
             </div>
             <div class="obra">
-                <img src="" alt="">
+                <div class="hot"></div>
+                <img src="css/Imagenes/reloj.JPG" alt="Obra">
             </div>
             <div class="obra">
-                <img src="" alt="">
+                <div class="hot"></div>
+                <img src="css/Imagenes/cirulo_sol.JPG" alt="Obra">
             </div>
             <div class="obra">
-                <img src="" alt="">
+                <div class="hot"></div>
+                <img src="css/Imagenes/cabeza.jpg" alt="Obra">
             </div>
             <div class="obra">
-                <img src="" alt="">
+                <div class="hot"></div>
+                <img src="css/Imagenes/campera.JPG" alt="Obra">
             </div>
+
         </div>
     </section>
 
@@ -113,11 +143,11 @@
         </div>
         <div class="logo-redes">
             <div class="logo">
-                <a href=""></a>
+                <a href="">PennyCostas</a>
             </div>
             <div class="redes">
-                <a href=""></a>
-                <a href=""></a>
+                <a href=""><img src="css/Imagenes/logotipo-de-instagram.png" alt="Logo Instagram"></a>
+                <a href=""><img src="css/Imagenes/logo-de-facebook.png" alt=""></a>
             </div>
         </div>
     </footer>
