Modificaciones sobre el html y el css

--- a/index.html
+++ b/index.html
@@ -6,24 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&family=Lora:wght@400;500&display=swap"
+        rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/649ced2843.js" crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" href="css/styles.css">
     <title>Penny Costas</title>
+    <script defer src="index.js"></script>
 </head>
 
 <body>
 
-    <header>
+    <nav>
+        <div class="mobile">
+            <header class="header">
+                <h3 class="logo">Penny Costas</h3>
+                <div class="barra-principal">
+                    <button class="more"><i class="fa-sharp fa-solid fa-bars"></i></button>
+                    <div class="links">
+                        <ul>
+                            <a href="">
+                                <li>Inicio</li>
+                            </a>
+                            <a href="">
+                                <li>Tienda</li>
+                            </a>
+                            <a href="">
+                                <li>Como Comprar</li>
+                            </a>
+                            <a href="">
+                                <li>Preguntas Frecuentes</li>
+                            </a>
+                            <a href="">
+                                <li>Contacto</li>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
 
-        <h3 class="logo">Penny Costas</h1>
-            <div class="barra-principal">
-                <li>Inicio</li>
-                <li>Tienda</li>
-                <li>Como Comprar</li>
-                <li>Preguntas Frecuentes</li>
-                <li>Contacto</li>
-            </div>
-
-    </header>
+            </header>
+        </div>
+    </nav>
 
     <section class="carrusel">
 
@@ -146,8 +174,8 @@
                 <a href="">PennyCostas</a>
             </div>
             <div class="redes">
-                <a href=""><img src="css/Imagenes/logotipo-de-instagram.png" alt="Logo Instagram"></a>
-                <a href=""><img src="css/Imagenes/logo-de-facebook.png" alt=""></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
             </div>
         </div>
     </footer>
