Avances en el CSS - Modificaciones en el nav

--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
 <body>
 
     <nav>
-        <div class="mobile">
-            <header class="header">
-                <h3 class="logo">Penny Costas</h3>
-                <div class="barra-principal">
-                    <button class="more"><i class="fa-sharp fa-solid fa-bars"></i></button>
-                    <div class="links">
+        <header class="header">
+            <div class="mobile">
+                <div class="logo">
+                    <a class="a__logo" href="">
+                        <h3 class="logo">Penny Costas</h3>
+                    </a>
+                </div>
+
+                <div class="barra-desplegable">
+                    <div class="boton">
+                        <button class="btn__desplegable"><i class="fa-sharp fa-solid fa-bars"></i></button>
+                    </div>
+                    <div class="barra__submenu">
                         <ul>
                             <a href="">
                                 <li>Inicio</li>
@@ -48,9 +55,32 @@
                         </ul>
                     </div>
                 </div>
+            </div>
 
-            </header>
-        </div>
+            <div class="desktop">
+
+                <h3 class="logo">Penny Costas</h3>
+
+                <div class="desktop__primary">
+                    <a href="">
+                        <li>Inicio</li>
+                    </a>
+                    <a href="">
+                        <li>Tienda</li>
+                    </a>
+                    <a href="">
+                        <li>Como Comprar</li>
+                    </a>
+                    <a href="">
+                        <li>Preguntas Frecuentes</li>
+                    </a>
+                    <a href="">
+                        <li>Contacto</li>
+                    </a>
+                </div>
+
+            </div>
+        </header>
     </nav>
 
     <section class="carrusel">
