Se añadio funcionalidad al boton del nav

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
                 <div class="barra-desplegable">
                     <div class="boton">
-                        <button class="btn__desplegable"><i class="fa-sharp fa-solid fa-bars"></i></button>
+                        <button class="btn__desplegable" aria-label="Abrir menu"><i
+                                class="fa-sharp fa-solid fa-bars"></i></button>
                     </div>
                     <div class="barra__submenu">
                         <ul>
