Se añadio funcionalidades javascript al header

--- a/index.html
+++ b/index.html
@@ -24,60 +24,62 @@
 
     <nav>
         <header class="header">
-            <div class="mobile">
-                <div class="logo">
-                    <a class="a__logo" href="">
-                        <h3 class="logo">Penny Costas</h3>
-                    </a>
+            <div class="scroll">
+                <div class="mobile">
+                    <div class="logo">
+                        <a class="a__logo" href="">
+                            <h3 class="logo">Penny Costas</h3>
+                        </a>
+                    </div>
+                    <div class="barra-desplegable">
+                        <div class="boton">
+                            <button class="btn__desplegable" aria-label="Abrir menu"><i
+                                    class="fa-sharp fa-solid fa-bars"></i></button>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="barra-desplegable">
-                    <div class="boton">
-                        <button class="btn__desplegable" aria-label="Abrir menu"><i
-                                class="fa-sharp fa-solid fa-bars"></i></button>
-                    </div>
-                    <div class="barra__submenu">
-                        <ul>
-                            <a href="">
-                                <li>Inicio</li>
-                            </a>
-                            <a href="">
-                                <li>Tienda</li>
-                            </a>
-                            <a href="">
-                                <li>Como Comprar</li>
-                            </a>
-                            <a href="">
-                                <li>Preguntas Frecuentes</li>
-                            </a>
-                            <a href="">
-                                <li>Contacto</li>
-                            </a>
-                        </ul>
-                    </div>
+                <div class="barra__submenu">
+                    <ul>
+                        <a href="">
+                            <li>Inicio</li>
+                        </a>
+                        <a href="">
+                            <li>Tienda</li>
+                        </a>
+                        <a href="">
+                            <li>Como Comprar</li>
+                        </a>
+                        <a href="">
+                            <li>Preguntas Frecuentes</li>
+                        </a>
+                        <a href="">
+                            <li>Contacto</li>
+                        </a>
+                    </ul>
                 </div>
             </div>
 
             <div class="desktop">
 
-                <h3 class="logo">Penny Costas</h3>
-
-                <div class="desktop__primary">
-                    <a href="">
-                        <li>Inicio</li>
-                    </a>
-                    <a href="">
-                        <li>Tienda</li>
-                    </a>
-                    <a href="">
-                        <li>Como Comprar</li>
-                    </a>
-                    <a href="">
-                        <li>Preguntas Frecuentes</li>
-                    </a>
-                    <a href="">
-                        <li>Contacto</li>
-                    </a>
+                <div class="scroll">
+                    <h3 class="logo">Penny Costas</h3>
+                    <div class="desktop__primary">
+                        <a href="">
+                            <li>Inicio</li>
+                        </a>
+                        <a href="">
+                            <li>Tienda</li>
+                        </a>
+                        <a href="">
+                            <li>Como Comprar</li>
+                        </a>
+                        <a href="">
+                            <li>Preguntas Frecuentes</li>
+                        </a>
+                        <a href="">
+                            <li>Contacto</li>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -85,12 +87,23 @@
     </nav>
 
     <section class="carrusel">
+        <div class="movil-carrusel">
+            <!-- <h1 class="title">Penny <br>Costas</h1> -->
+            <p>La pintura es poesía muda; la poesía pintura ciega</p>
 
-        <h1 class="title">Penny <br>Costas</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quae ad voluptas labore at quod illum! Voluptas
-            ipsa dignissimos, iste veritatis dolores expedita! Aut, sunt?</p>
-        <a href="#" class="btn">
-            Ver Obras</a>
+            <a href="#" class="btn">
+                Ver Obras</a>
+
+        </div>
+        <div class="desktop-carrusel">
+            <h1 class="title">Penny <br>Costas</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quae ad voluptas labore at quod illum!
+                Voluptas
+                ipsa dignissimos, iste veritatis dolores expedita! Aut, sunt?</p>
+
+            <a href="#" class="btn">
+                Ver Obras</a>
+        </div>
 
     </section>
 
