--- a/index.html
+++ b/index.html
@@ -24,125 +24,151 @@
 
     <nav>
         <header class="header">
-            <div class="scroll">
-                <div class="mobile">
-                    <div class="logo">
-                        <a class="a__logo" href="">
-                            <h3 class="logo">Penny Costas</h3>
-                        </a>
-                    </div>
-                    <div class="barra-desplegable">
-                        <div class="boton">
-                            <button class="btn__desplegable" aria-label="Abrir menu"><i
-                                    class="fa-sharp fa-solid fa-bars"></i></button>
-                        </div>
-                    </div>
+            <div class="mobile" id="mobile">
+                <div class="logo">
+                    <a class="a__logo" href="#principio">
+                        <h3 class="logo">Penny Costas</h3>
+                    </a>
                 </div>
-                <div class="barra__submenu">
-                    <ul>
-                        <a href="">
-                            <li>Inicio</li>
-                        </a>
-                        <a href="">
-                            <li>Tienda</li>
-                        </a>
-                        <a href="">
-                            <li>Como Comprar</li>
-                        </a>
-                        <a href="">
-                            <li>Preguntas Frecuentes</li>
-                        </a>
-                        <a href="">
-                            <li>Contacto</li>
-                        </a>
-                    </ul>
+                <div class="barra-desplegable">
+                    <div class="boton">
+                        <button class="btn__desplegable" aria-label="Abrir menu"><i
+                                class="fa-sharp fa-solid fa-bars"></i></button>
+                    </div>
                 </div>
             </div>
-
-            <div class="desktop">
-
-                <div class="scroll">
-                    <h3 class="logo">Penny Costas</h3>
-                    <div class="desktop__primary">
-                        <a href="">
-                            <li>Inicio</li>
+            <div class="barra__submenu">
+                <ul>
+                    <li>
+                        <a href="#principio">
+                            Inicio
                         </a>
-                        <a href="">
-                            <li>Tienda</li>
+                    </li>
+                    <li>
+                        <a href="#obras-destacadas">
+                            Obras Destacadas
                         </a>
-                        <a href="">
-                            <li>Como Comprar</li>
+                    </li>
+                    <li>
+                        <a href="#faqs">
+                            Como Comprar
                         </a>
-                        <a href="">
-                            <li>Preguntas Frecuentes</li>
+                    </li>
+                    <li>
+                        <a href="#faqs">
+                            Preguntas Frecuentes
                         </a>
-                        <a href="">
-                            <li>Contacto</li>
+                    </li>
+                    <li>
+                        <a href="https://wa.me/5493434052081">
+                            Contacto
                         </a>
-                    </div>
-                </div>
-
+                    </li>
+                </ul>
             </div>
         </header>
+
+        <div class="desktop">
+
+            <header class="header_desktop">
+                <h3 class="logo">Penny Costas</h3>
+                <div class="desktop__primary">
+                    <li><a href="#principio">
+                            Inicio</a></li>
+                    </a>
+                    <!-- <li><a href="">
+                            Tienda</a></li>
+                    </a> -->
+                    <li><a href="#faqs">
+                            Como Comprar</a></li>
+                    </a>
+                    <li> <a href="#faqs">
+                            Preguntas Frecuentes</a></li>
+                    </a>
+                    <li><a href="https://wa.me/5493434052081">
+                            Contacto</a></li>
+                    </a>
+                </div>
+            </header>
+
+        </div>
     </nav>
 
-    <section class="carrusel">
+    <section class="carrusel" id="principio">
         <div class="movil-carrusel">
             <!-- <h1 class="title">Penny <br>Costas</h1> -->
-            <p>La pintura es poesía muda; la poesía pintura ciega</p>
+            <p>La pintura es poesía muda;<br> la poesía pintura ciega.</p>
 
-            <a href="#" class="btn">
+            <a href="https://www.instagram.com/penny.costas/" class="btn">
                 Ver Obras</a>
 
         </div>
         <div class="desktop-carrusel">
-            <h1 class="title">Penny <br>Costas</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quae ad voluptas labore at quod illum!
-                Voluptas
-                ipsa dignissimos, iste veritatis dolores expedita! Aut, sunt?</p>
-
-            <a href="#" class="btn">
-                Ver Obras</a>
+            <!-- <h1 class="title">Penny <br>Costas</h1> -->
+            <div class="fondoAjuste">
+                <div class="desktop-carrusel-texto">
+                    <p>La pintura es poesía muda; la poesía pintura ciega.</p>
+                    <a href="https://www.instagram.com/penny.costas/" class="btn-desktop">
+                        Ver Obras</a>
+                </div>
+            </div>
         </div>
 
     </section>
 
     <section class="autor">
+        <h1>Penny Costas</h1>
         <div class="contenedor">
-            <img class="foto__Penny" src="css/Imagenes/Penny_autor.jpg" alt="Foto de PennyCostas">
-            <p class="descripcion__autor">Bueno mi nombre obviamente no es Penny Costas, sino que detras de este
-                pseudónimo estoy yo, Rodrigo Romero, un artista de 21 años que busca mostrar su arte a esta parte del
-                globo.
-                Desde los 8 años aproximadamente me metí en el mundo del dibujo y mientras crecía en la pintura. Todos
-                me decian que era bueno y que siga haciendolo y hace un tiempo tomé la decision de dejar mi trabajo y
-                dedicarme pura y exclusivamente a esto cueste lo que cueste, porque uno tiene que hacer algo que lo haga
-                feliz, aunque los resultados no sean los esperados; ademas me excuso con que soy joven;).
-                Uno de mis sueños siempre fue tener una marca de lo que sea, poder vivir de ella, y que el mundo lleve
-                una prenda, tenga un cuadro o lo que sea diseñado por mi. Entonces dije "listo, me mando" y cree Penny
-                Costas, me hubiese gustado elegir un nombre con un trasfondo, un significado, pero queria simplemente
-                tener un nombre artistico que sea el nombre de la marca a la vez; surgió mientras trabajaba luego de
-                unos tantos pensados y decidí dejar de darle vueltas al asunto y quedarme con ese nombre.
-                Tomo inspiración de millones de cosas pero de donde mas saco es de la musica y los artistas que la
-                hacen. Me gusta mucho el mundo de la ropa, siempre que salgo tengo que ponerme algo que me diferencie de
-                los demas, y es por eso que está en mis planes hacer ropa, pero eso lleva un poco más de logistica, por
-                lo que estoy averiguando,denme tiempo.
-                Quiero que el mundo me conozca por mis piezas de arte que son unicas, ese es el valor que les doy, la
-                persona que adquiera una pieza Penny Costas va a saber que tiene en su ambiente un cuadro pintado y
-                texturizado a mano unico en el mundo.
-                No se si esto llegará a algun lado pero por lo menos lo intenté y siempre voy a hacer lo qie me hace
-                feliz</p>
+            <div class="foto"><img class="foto__Penny" src="css/Imagenes/Penny_autor_mejorada.jpg"
+                    alt="Foto de PennyCostas">
+            </div>
+            <div class="contenedor_autor_texto">
+                <p class="descripcion__autor">Bueno mi nombre obviamente no es Penny Costas, sino que detras de este
+                    pseudónimo estoy yo, Rodrigo Romero, un artista de 21 años que busca mostrar su arte a esta parte
+                    del
+                    globo.
+                    Desde los 8 años aproximadamente me metí en el mundo del dibujo y mientras crecía en la pintura.
+                    Todos
+                    me decian que era bueno y que siga haciendolo y hace un tiempo tomé la decision de dejar mi trabajo
+                    y
+                    dedicarme pura y exclusivamente a esto cueste lo que cueste, porque uno tiene que hacer algo que lo
+                    haga
+                    feliz, aunque los resultados no sean los esperados; ademas me excuso con que soy joven;).
+                    Uno de mis sueños siempre fue tener una marca de lo que sea, poder vivir de ella, y que el mundo
+                    lleve
+                    una prenda, tenga un cuadro o lo que sea diseñado por mi. Entonces dije "listo, me mando" y cree
+                    Penny
+                    Costas, me hubiese gustado elegir un nombre con un trasfondo, un significado, pero queria
+                    simplemente
+                    tener un nombre artistico que sea el nombre de la marca a la vez; surgió mientras trabajaba luego de
+                    unos tantos pensados y decidí dejar de darle vueltas al asunto y quedarme con ese nombre.
+                    Tomo inspiración de millones de cosas pero de donde mas saco es de la musica y los artistas que la
+                    hacen. Me gusta mucho el mundo de la ropa, siempre que salgo tengo que ponerme algo que me
+                    diferencie de
+                    los demas, y es por eso que está en mis planes hacer ropa, pero eso lleva un poco más de logistica,
+                    por
+                    lo que estoy averiguando,denme tiempo.
+                    Quiero que el mundo me conozca por mis piezas de arte que son unicas, ese es el valor que les doy,
+                    la
+                    persona que adquiera una pieza Penny Costas va a saber que tiene en su ambiente un cuadro pintado y
+                    texturizado a mano unico en el mundo.
+                    No se si esto llegará a algun lado pero por lo menos lo intenté y siempre voy a hacer lo qie me hace
+                    feliz</p>
+                <a href="https://wa.me/5493434052081" class="btn-desktop">
+                    Contactame</a>
+            </div>
         </div>
 
     </section>
 
-    <section class="FAQS">
+    <section class="faqs" id="faqs">
 
         <div class="garantias">
-            <header>
-                <h2 class="faqs">Preguntas Frecuentes</h2>
-            </header>
+
+            <h2>Preguntas Frecuentes</h2>
+
             <div class="garantia">
-                <img src="css/Imagenes/check.png" alt="Selección">
+                <div class="img__centrar"><img src="css/Imagenes/check.png" alt="Selección"></div>
                 <h3 class="titulo">Selección</h3>
                 <p>Las obras de Penny Costa a la venta son seleccionadas para garantizar que tengas una pieza unica e
                     irrepetible.</p>
@@ -167,7 +193,7 @@
 
     </section>
 
-    <section class="obras-destacadas">
+    <section class="obras-destacadas" id="obras-destacadas">
         <header>
             <div class="destacadas-titulo">
                 <h3>Venta de Arte</h3>
@@ -178,28 +204,34 @@
         <div class="obras">
 
             <div class="obra">
-                <div class="hot"></div>
+                <div class="hot">HOT</div>
                 <img src="css/Imagenes/azul.JPG" alt="Obra">
+                <div class="obra_nombre">Mariposa Azul</div>
             </div>
             <div class="obra">
-                <div class="hot"></div>
+                <div class="hot">HOT</div>
                 <img src="css/Imagenes/casa.JPG" alt="Obra">
+                <div class="obra_nombre">Casa</div>
             </div>
             <div class="obra">
-                <div class="hot"></div>
+                <div class="hot">HOT</div>
                 <img src="css/Imagenes/reloj.JPG" alt="Obra">
+                <div class="obra_nombre">Reloj</div>
             </div>
             <div class="obra">
-                <div class="hot"></div>
+                <div class="hot">HOT</div>
                 <img src="css/Imagenes/cirulo_sol.JPG" alt="Obra">
+                <div class="obra_nombre">Paisaje en Circulo</div>
             </div>
             <div class="obra">
-                <div class="hot"></div>
+                <div class="hot">HOT</div>
                 <img src="css/Imagenes/cabeza.jpg" alt="Obra">
+                <div class="obra_nombre">Cabeza</div>
             </div>
             <div class="obra">
-                <div class="hot"></div>
+                <div class="hot">HOT</div>
                 <img src="css/Imagenes/campera.JPG" alt="Obra">
+                <div class="obra_nombre">Camisa</div>
             </div>
 
         </div>
@@ -207,19 +239,22 @@
 
     <footer>
         <div class="footer-nav">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Tienda</a></li>
-            <li><a href="">Como Comprar</a></li>
-            <li><a href=""></a>FAQS</li>
-            <li><a href=""></a>Contacto</li>
+            <li><a href="#principio">Inicio</a></li>
+            <!-- <li><a href="">Tienda</a></li> -->
+            <li><a href="#faqs">Como Comprar</a></li>
+            <li><a href="#faqs">FAQS</a></li>
+            <li><a href="https://wa.me/5493434052081">Contacto</a></li>
         </div>
-        <div class="logo-redes">
-            <div class="logo">
-                <a href="">PennyCostas</a>
+        <div class="logo">
+            <a href="#principio">PennyCostas</a>
+            <div class="logo-redes">
             </div>
             <div class="redes">
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/penny.costas/"><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+            <div class="derechos">
+                <h4 class="h4">© 2022 DobleF. All rights reserved</h4>
             </div>
         </div>
     </footer>
