Finalizada pagina v.beta

--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
             <!-- <h1 class="title">Penny <br>Costas</h1> -->
             <div class="fondoAjuste">
                 <div class="desktop-carrusel-texto">
-                    <p>La pintura es poesía muda; la poesía pintura ciega.</p>
+                    <p>"La pintura es poesía muda; la poesía pintura ciega."</p>
+
                     <a href="https://www.instagram.com/penny.costas/" class="btn-desktop">
                         Ver Obras</a>
+
                 </div>
             </div>
         </div>
@@ -153,8 +155,9 @@
                     persona que adquiera una pieza Penny Costas va a saber que tiene en su ambiente un cuadro pintado y
                     texturizado a mano unico en el mundo.
                     No se si esto llegará a algun lado pero por lo menos lo intenté y siempre voy a hacer lo qie me hace
-                    feliz</p>
-                <a href="https://wa.me/5493434052081" class="btn-desktop">
+                    feliz
+                </p>
+                <a href="https://wa.me/5493434052081" class="btn-autor">
                     Contactame</a>
             </div>
         </div>
@@ -163,9 +166,9 @@
 
     <section class="faqs" id="faqs">
 
+        <h2>Preguntas Frecuentes</h2>
         <div class="garantias">
 
-            <h2>Preguntas Frecuentes</h2>
 
             <div class="garantia">
                 <div class="img__centrar"><img src="css/Imagenes/check.png" alt="Selección"></div>
